fix: white on white text in dark mode (Windows OS)
* set color black for select > option

--- a/src/components/FontSwitcher/FontSwitcher.module.scss
+++ b/src/components/FontSwitcher/FontSwitcher.module.scss
@@ -19,6 +19,9 @@
     font-weight: 700;
     cursor: pointer;
     color: inherit;
+    option {
+      color: black;
+    }
   }
   select:focus {
     outline: none;
